src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/GLDebugMessageCallback_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/GLDebugMessageCallback_StringErrorContext.class */
public final class GLDebugMessageCallback_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("create(J)Lorg/lwjgl/opengl/GLDebugMessageCallback;", "net/labymod/core/laby3d/opengl/error/generated/GLDebugMessageCallbackErrorContext");
        methods.put("createSafe(J)Lorg/lwjgl/opengl/GLDebugMessageCallback;", "net/labymod/core/laby3d/opengl/error/generated/GLDebugMessageCallbackErrorContext");
        methods.put("create(Lorg/lwjgl/opengl/GLDebugMessageCallbackI;)Lorg/lwjgl/opengl/GLDebugMessageCallback;", "net/labymod/core/laby3d/opengl/error/generated/GLDebugMessageCallbackErrorContext");
        methods.put("getMessage(IJ)Ljava/lang/String;", "net/labymod/core/laby3d/opengl/error/generated/GLDebugMessageCallbackErrorContext");
        return methods;
    }
}
